--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">New Delhi</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">1:48:34</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">August 15th 2024</div>
+        <div class="time">1:48:34</div>
+      </div>
+    </div>
     <footer>
       This project is coded by Soumya Singh and is open sourced on
       <a href="#" target="_blank">Github</a>
