--- a/index.html
+++ b/index.html
@@ -17,18 +17,23 @@
         <option value="">New Delhi</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">1:48:34</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th 2024</div>
+          <div class="time">1:48:34 <small>AM</small></div>
+        </div>
       </div>
+
       <div class="city">
         <h2>Sydney</h2>
         <div class="date">August 15th 2024</div>
-        <div class="time">1:48:34</div>
+        <div class="time">1:48:34 <span>AM</span></div>
       </div>
     </div>
+    <br />
     <footer>
-      This project is coded by Soumya Singh and is open sourced on
+      This project is coded by <strong>Soumya Singh ❤</strong> and is open
+      sourced on
       <a href="#" target="_blank">Github</a>
     </footer>
     <script src="javascript/index.js"></script>
