--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World-Clock-by-Soumya-Singh</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.js"></script>
   </head>
   <body>
     <div class="container">
@@ -12,22 +14,22 @@
 
       <select>
         <option value="">Select a city..</option>
-        <option value="">London</option>
-        <option value="">New York</option>
+        <option value="">Sydney</option>
+        <option value="">Los Angeles</option>
         <option value="">New Delhi</option>
       </select>
-      <div class="city">
+      <div class="city" id="LA">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">August 15th 2024</div>
-          <div class="time">1:48:34 <small>AM</small></div>
+          <div class="date"></div>
+          <div class="time"></div>
         </div>
       </div>
 
-      <div class="city">
+      <div class="city" id="SY">
         <h2>Sydney</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">1:48:34 <span>AM</span></div>
+        <div class="date"></div>
+        <div class="time"></div>
       </div>
     </div>
     <br />
