--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select>
+      <select id="city">
         <option value="">Select a city..</option>
-        <option value="">Sydney</option>
-        <option value="">Los Angeles</option>
-        <option value="">New Delhi</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Europe/Paris">Paris</option>
       </select>
-      <div class="city" id="LA">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date"></div>
-          <div class="time"></div>
+      <div id="cities">
+        <div class="city" id="LA">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+            <div class="time"></div>
+          </div>
         </div>
       </div>
 
