--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       <select id="city">
         <option value="">Select a city..</option>
+        <option value="current">My current Location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Europe/Paris">Paris</option>
@@ -32,6 +33,14 @@
         <h2>Sydney</h2>
         <div class="date"></div>
         <div class="time"></div>
+      </div>
+
+      <div class="city" id="MO">
+        <div>
+          <h2>Moscow</h2>
+          <div class="date"></div>
+          <div class="time"></div>
+        </div>
       </div>
     </div>
     <br />
